# another-todos

./: .gitignore  README.md
backend/golang/: Makefile  go.mod
backend/golang-fiber/: .env  Makefile  go.mod  go.sum  main.go
backend/golang-fiber/database/: connect.go
backend/golang-fiber/internals/handlers/: healthcheck.go  todos.go
backend/golang-fiber/internals/models/: todo.go
backend/golang-fiber/router/: healthcheck.go  todos.go
backend/golang/cmd/todo-backend/: main.go
backend/golang/internal/app/: application.go  errors.go  healthcheck.go  helpers.go  middleware.go  routes.go  todos.go
backend/golang/internal/data/: todo.go
backend/golang/internal/validator/: validator.go
backend/golang/migrations/: 000001_create_todos_table.up.sql
backend/rust-actix/: .env  Cargo.toml  Makefile
backend/rust-actix/migrations/2023-05-25-154807_create_todos/: down.sql  up.sql
backend/rust-actix/src/: args_parse.rs  main.rs
backend/rust-actix/src/controllers/: healthcheck.rs  mod.rs  todos.rs
backend/rust-actix/src/helpers/: response.rs
backend/rust-actix/src/models/: errors.rs  mod.rs  schema.rs  todo.rs
frontend/vanilla-javascript/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/vanilla-javascript/css/: todo.css
frontend/vanilla-javascript/js/: todo.js
